--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,6 @@
 .table {
     position: absolute;
-    height: 100%;
+    height: 90vh;
     left: 0;
 }
 
@@ -20,6 +20,8 @@ nav {
     option {
         color: white!important;
     }
+
+    height: 10vh;
 }
 
 td {
